--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.3.0
   get: ^4.7.2
   sizer: ^3.0.4
+  shared_preferences: ^2.5.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
